# qagent

./: .cursorrules  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: 01_basic_agent.py  02_tool_calling.py  03_streaming_response.py  04_hooks.py  05_chater_pool_failover.py  06_trace_system.py  07_sequential_pipeline.py  08_parallel_pipeline.py  09_msghub_broadcast.py  10_react_agent.py  11_agentic_memory.py  12_custom_speaker.py  13_mcp_tools.py  14_pipeline_patterns.py  15_advanced_hooks.py  16_mcp_time_agent.py  17_flow_advanced.py  17_workflow_basic.py  18_workflow_advanced.py  19_flow_basic.py  20_msghub_broadcast.py  21_agentic_memory.py  collaborative_agents_demo.py
pyagent/: __init__.py
pyagent/agent/: _agentic_memory.py  _enhanced_agents.py  _react_agent.py
pyagent/core/: __init__.py  _agent.py  _chunk.py  _exceptions.py  _model.py  _msghub.py  _pipeline.py  _prompt.py  _runner.py  _speaker.py  _tools.py  _trace.py  _utils.py  _vb.py  _workflow.py
pyagent/examples/: 01_single_agent_with_tools.py  02_hooks_demo.py  03_multi_agent_msghub.py  04_sequential_workflow.py  05_debate_system.py  06_multimodal_vision.py  07_class_hooks_global.py  07_decorator_hooks_final.py  08_code_review_workflow.py  09_interactive_agent.py  10_react_agents.py  11_custom_prompts.py  12_enhanced_agent.py  13_enhanced_agents_demo.py  14_agentic_memory_demo.py  elegant_trace_example.py  simple_elegant_trace.py
pyagent/prompt/: __init__.py  advanced_prompts.py  enhanced_prompts.py  memory_prompts.py  react_prompts.py
pyagent/tests/: test_full_integration_trace.py  test_multiagent_trace.py  test_stream_and_multiagent.py  test_trace_agent_integration.py  test_trace_params.py  test_trace_stack.py
pyagent/tts/: asr.py  tts.py
qagent/: __init__.py
qagent/agent/: __init__.py  _agentic_memory.py  _react_agent.py
qagent/core/: __init__.py  _agent.py  _builtin_tools.py  _chunk.py  _exceptions.py  _flow.py  _model.py  _msghub.py  _pipeline.py  _tools.py  (+4 more)
tests/: conftest.py  test_agent.py  test_flow_mock.py  test_memory.py  test_msghub.py  test_pipeline.py  test_react_agent.py  test_react_agent_types.py  test_runner.py  test_toolkit.py  test_trace.py  test_trace_concurrent.py
(+4 files in other folders)
