[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagent"
version = "0.1.0"
description = "Lightweight multi-agent framework with Trace, ReAct, A-MEM memory system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "aixiasang", email = "aixiasang@163.com"}
]
maintainers = [
    {name = "aixiasang", email = "aixiasang@163.com"}
]
keywords = [
    "agent",
    "ai",
    "llm",
    "trace",
    "react",
    "memory",
    "a-mem",
    "multi-agent",
    "mcp",
    "async",
    "runner"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "numpy>=1.20.0",
    "chromadb>=0.4.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/aixiasang/pyagent"
Repository = "https://github.com/aixiasang/pyagent"
Documentation = "https://github.com/aixiasang/pyagent#readme"
"Bug Reports" = "https://github.com/aixiasang/pyagent/issues"
"Source Code" = "https://github.com/aixiasang/pyagent"

[tool.setuptools]
packages = ["pyagent", "pyagent.core", "pyagent.agent", "pyagent.prompt", "pyagent.tts"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
